# Thermal_Imaging_Simulation

./: .gitignore  BILINEAR_INTERPOLATION_GUIDE.md  BUILD_AND_DEPLOYMENT_GUIDE.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  INTERPOLATION_METHODS_COMPARISON.md  MLX90640Driver.cpp  MLX90640Driver.h  MLX90640Upscaler.cpp  MLX90640Upscaler.h  QUICK_START.md  README.md  README_MLX90640.md  TARGET_LOCK_SYSTEM_GUIDE.md  TargetLockTracker.cpp  TargetLockTracker.h  ThermalUIRenderer.cpp  ThermalUIRenderer.h  build.sh  build_sdl2_app.sh  create_macos_app.sh  platformio.ini  run_thermal_app.sh  target_tracking_example.cpp  thermal_app_sdl2.cpp  thermal_imaging_example.cpp  thermal_upscaling_example.cpp
